--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-# Object file
-*.o
+# Exclude everything JPEG:, so everything thats jpeg in the working directly, will be excluded.
+*.jpg
 
-# Ada Library Information
-*.ali
+# Exclude ext folder - shows that everything in the ext folder is excluded.
+/ext/*
+
+#Exclude all JPG files in images folder: - Everything that is in the images folder, thats a jpg, is excluded.
+/images/*.jpg
